# silence

./: AGENTS.md  README.md  download_models.py  evdev_hotkey_listener.py  funasr_ws_constants.py  funasr_ws_handler.py  funasr_ws_models.py  funasr_ws_server.py  funasr_ws_session.py  main.js  package.json  pnpm-lock.yaml  preload.js  pyproject.toml
.serena/: project.yml
docs/: asr-service-architecture.md  websocket-protocol.md
docs/architecture/: model-design.md  model-pool-design.md
frontend/src/: App.jsx  settings.jsx
frontend/src/config/: audioConfig.js
frontend/src/constants/: wsMessageTypes.js
frontend/src/helpers/: cliTriggerServer.js  clipboard.js  funasrManager.js  funasrWsClient.js  funasrWsServerManager.js  hotkeyManager.js  ipcHandlers.js  logManager.js  realtimeClient.js  tray.js  wsConnection.js  wsMessageProcessor.js
frontend/src/hooks/: useASRService.js  (+3 more)
model_servers/: funasr_server.py  whisper_server.py
scripts/: download_models.py  evdev_hotkey_listener.py
src/: App.jsx  settings.jsx
src/components/: SettingsPanel.jsx
src/config/: audioConfig.js
src/constants/: wsMessageTypes.js
src/helpers/: environment.js  funasrManager.js  funasrWsClient.js  funasrWsServerManager.js  hotkeyManager.js  ipcHandlers.js  model_manager.js  pythonInstaller.js  wsConnection.js  wsMessageProcessor.js
src/hooks/: useHotkey.js  useModelStatus.js  useWsBatch.js  useWsRealtime.js  useWsServerStatus.js
src/services/: ASRServiceFactory.js  ASRServiceInterface.js  FunASRService.js
src/utils/: audioUtils.js
src/workers/: realtimeAudioProcessor.js
(+6 files in other folders)
