[project]
name = "ququ"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "evdev>=1.9.2",
    "funasr>=1.2.7",
    "librosa>=0.11.0",
    "numpy<2",
    "torch==2.0.1",
    "torchaudio==2.0.2",
    "torchvision==0.15.2",
]
